--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.70"
-rust-bert = "0.20.0"
-tch = "0.10.3"
+rust-bert = "0.22.0"
+tch = "^0.14.0"
+
+[[bin]]
+name = "torch-demo"
+path = "./test-tool/torch_demo.rs"
